--- a/content/blog/opinions/2025-02-15-ぶいすぽバレンタインまとめ.md
+++ b/content/blog/opinions/2025-02-15-ぶいすぽバレンタインまとめ.md
@@ -10,138 +10,92 @@ tags: ['VTuber', 'ぶいすぽっ！']
 
 ## 花芽すみれ / Kaga Sumire
 
-```youtube
-02r-xWlwok0
-```
+::youtube{id="02r-xWlwok0"}
 
 ## 花芽なずな / Nazuna Kaga
 
-```youtube
-76ooT4j2L50
-```
+::youtube{id="76ooT4j2L50"}
 
 ## 小雀とと / Toto Kogara
 
-```youtube
-wGrM2-w3nhU
-```
+::youtube{id="wGrM2-w3nhU"}
 
 ## 一ノ瀬うるは
 
-```youtube
-pL2KaGdSd5o
-```
+::youtube{id="pL2KaGdSd5o"}
 
 ## 胡桃のあ
 
-```youtube
-vIYq8VGF4Pk
-```
+::youtube{id="vIYq8VGF4Pk"}
 
 ## 兎咲ミミ / Tosaki Mimi
 
-```youtube
-O893Usc83rU
-```
+::youtube{id="O893Usc83rU"}
 
 ## 空澄セナ -Asumi Sena-
 
-```youtube
-vPTnKYo9uJI
-```
+::youtube{id="vPTnKYo9uJI"}
 
 ## 橘ひなの / Hinano Tachibana
 
-```youtube
-1Zsh-JQ9tQg
-```
+::youtube{id="1Zsh-JQ9tQg"}
 
 ## 英リサ.Hanabusa Lisa
 
-```youtube
-ftAdQUnANdo
-```
+::youtube{id="ftAdQUnANdo"}
 
 ## 如月れん -Ren kisaragi-
 
-```youtube
-VeSbBpeYsXw
-```
+::youtube{id="VeSbBpeYsXw"}
 
 ## 神成きゅぴ / Kaminari Qpi
 
-```youtube
-gGS9l-A6E_M
-```
+::youtube{id="gGS9l-A6E_M"}
 
 ## 八雲べに
 
-```youtube
-Gv_fPoualbQ
-```
+::youtube{id="Gv_fPoualbQ"}
 
 ## 藍沢エマ / Aizawa Ema
 
-```youtube
-NtK1Dk62g5Q
-```
+::youtube{id="NtK1Dk62g5Q"}
 
 ## 紫宮るな /shinomiya runa
 
-```youtube
-qBVXKXBAVPQ
-```
+::youtube{id="qBVXKXBAVPQ"}
 
 ## 猫汰つな / Nekota Tsuna
 
-```youtube
-m5YDSefFbNw
-```
+::youtube{id="m5YDSefFbNw"}
 
 ## 白波らむね / Shiranami Ramune
 
-```youtube
-TY5OqTeWuQs
-```
+::youtube{id="TY5OqTeWuQs"}
 
 ## Met Channel / 小森めと
 
-```youtube
-CErWUyLDuso
-```
+::youtube{id="CErWUyLDuso"}
 
 ## Akari ch.夢野あかり
 
-```youtube
-sErTl9gRzs8
-```
+::youtube{id="sErTl9gRzs8"}
 
 ## 夜乃くろむ / Yano Kuromu
 
-```youtube
-x-9zJqAJH24
-```
+::youtube{id="x-9zJqAJH24"}
 
 ## 紡木こかげ
 
-```youtube
-Auo2hk3JiFo
-```
+::youtube{id="Auo2hk3JiFo"}
 
 ## 千燈ゆうひ
 
-```youtube
-UjeAvAMIDQ4
-```
+::youtube{id="UjeAvAMIDQ4"}
 
 ## 蝶屋はなび / Choya Hanabi
 
-```youtube
-oR-hI2xIiEQ
-```
+::youtube{id="oR-hI2xIiEQ"}
 
 ## 甘結もか / Amayui Moka
 
-```youtube
-DwbAGJhxQ1s
-```
+::youtube{id="DwbAGJhxQ1s"}
