chore: YouTube記法を変更

--- a/content/blog/株式情報/銘柄分析/2021-02-20-TMDX.md
+++ b/content/blog/株式情報/銘柄分析/2021-02-20-TMDX.md
@@ -10,7 +10,7 @@ tags: ['銘柄分析', 'TMDX']
 
 今回はヘルスケア銘柄である**TransMedics (TMDX)** という、アメリカの臓器移植関連のデバイスメーカーについて調べた結果をまとめようと思います。大まかな概要は救急医である個人投資家のゆうすけさんが動画で紹介しているので、こちらもご覧ください。
 
-{{< youtube Vc42mpONbqg >}}
+::youtube{id="Vc42mpONbqg"}
 
 概要としては移植手術のための臓器を保存するためのシステムを提供する企業です。ドナーから提供された臓器の鮮度を保ち、移植手術を行えるまでのタイムリミットを引き延ばす技術の確率を目指している企業となります。既に複数の製品がCEマークを取得し、内1件はFDA承認済みとなっています。
 
