chore: Amazonディレクティブ記法に変更

--- a/content/blog/military/その他/2021-09-24-アメリカで銃を撃った際の費用.md
+++ b/content/blog/military/その他/2021-09-24-アメリカで銃を撃った際の費用.md
@@ -32,6 +32,4 @@ tags: ['実銃']
 
 ハンドガン以外にもサブマシンガンなど違う種類の銃も選べるのですが、初めての射撃という事もあってハンドガンをオススメされました。ハンドガンの中では今回使用した警察が使用するハンドガン(Glock 17)やウェスタンな感じの銃など選択肢がありました。
 
-```amazon:B088K6L1C6
-東京マルイ No.96 グロック17 Gen.4
-```
+::amazon{asin="B088K6L1C6" name="東京マルイ No.96 グロック17 Gen.4"}
