--- a/content/blog/military/外装パーツ/2023-06-10-BCMのレールカバーとフォアグリップ.md
+++ b/content/blog/military/外装パーツ/2023-06-10-BCMのレールカバーとフォアグリップ.md
@@ -12,13 +12,9 @@ BCM製のフォアグリップ『[BCMGUNFIGHTER KAG - Kinesthetic Angled Grip](h
 
 BCM AIRが発売しているBCM MCMR 11.5をせっかくならBCM純正の実銃パーツでドレスアップしたいなと思い購入してみました。今回購入したのはどちらもM-Lok用ですがKeyMod用やピカティニーレール用のモデルも販売されているので対象の規格にあったものか購入前にチェックが必要です。
 
-```amazon:B00QSIOCGQ
-BCM Bravo Company（ブラボーカンパニー） Kinesthetic Angled Grip （キネスティック アングルグリップ） KeyMod（キーモッド用） ブラック
-```
+::amazon{asin="B00QSIOCGQ" name="BCM Bravo Company（ブラボーカンパニー） Kinesthetic Angled Grip （キネスティック アングルグリップ） KeyMod（キーモッド用） ブラック"}
 
-```amazon:B07S1M7QR5
-BCM レールパネル M-LOK用 レイルカバー 5.5インチ 5枚セット ブラック
-```
+::amazon{asin="B07S1M7QR5" name="BCM レールパネル M-LOK用 レイルカバー 5.5インチ 5枚セット ブラック"}
 
 # 内容物
 
@@ -96,6 +92,4 @@ BCMが好きならば価格も抑えめですし買いでしょう。
 
 褒めすぎたので最後に気になった点を挙げておくと、フォアグリップ前部にレールパネルを配置せず左右には配置した場合、やや握り心地に違和感を覚えるのは注意が必要です。レールパネルで丸みがついているのにフォアグリップ部分だけ丸みがないためですね。これはレールパネルをカットしてフォアグリップ前部にも装着するか、より長いハンドガードに換装して装着することで回避できるます。素手ではなくグローブ越しであれば特にこの点も気にならないとは思いますが。
 
-```amazon:B0BGKRDYNR
-[BCM AIR] BCM MCMR 14.5 ガスブローバック 黒
-```
+::amazon{asin="B0BGKRDYNR" name="[BCM AIR] BCM MCMR 14.5 ガスブローバック 黒"}
