--- a/content/blog/military/外装パーツ/2025-01-06-LeapersのMP5用ハンドガード.md
+++ b/content/blog/military/外装パーツ/2025-01-06-LeapersのMP5用ハンドガード.md
@@ -74,10 +74,6 @@ T6処理が行われたアルミニウム合金で製造された本ハンドガ
 
 あとは4か所にネジを締め込めば装着完了です。
 
-```amazon:B0867BMPGK
-Vector Optics ベクターオプティクス ドットサイト マーベリック 第3世代
-```
+::amazon{asin="B0867BMPGK" name="Vector Optics ベクターオプティクス ドットサイト マーベリック 第3世代"}
 
-```amazon:B0CKB8S6PQ
-東京マルイ No.36 MP5 A4 18歳以上 次世代電動ガン
-```
+::amazon{asin="B0CKB8S6PQ" name="東京マルイ No.36 MP5 A4 18歳以上 次世代電動ガン"}
