--- a/content/blog/opinions/2021-12-18-宇宙旅行とクルーズ.md
+++ b/content/blog/opinions/2021-12-18-宇宙旅行とクルーズ.md
@@ -40,6 +40,4 @@ ZOZOTOWNの前澤友作氏の宇宙旅行が話題です。なんでも宇宙旅
 
 最高価格でも最低価格でもどちらにせよ宇宙旅行の方がお得です。
 
-```amazon:463524122X
-地中海クルーズ完全ガイド 人気寄港地31カ所+クルーズ成功22の秘訣
-```
+::amazon{asin="463524122X" name="地中海クルーズ完全ガイド 人気寄港地31カ所+クルーズ成功22の秘訣"}
