--- a/content/blog/opinions/2022-01-19-コンサルへの転職.md
+++ b/content/blog/opinions/2022-01-19-コンサルへの転職.md
@@ -206,6 +206,4 @@ ITコンサルの場合、思考の瞬発力を見ている場合もあるので
 
 最後まで読んでいただきありがとうございました。以上が私が SE から IT コンサルへと実際に転職する際に得た知見です。必ずしも最適解とは限りませんが、参考となっていれば幸いです。
 
-```amazon:4799315323
-コンサル一年目が学ぶこと
-```
+::amazon{asin="4799315323" name="コンサル一年目が学ぶこと"}
