--- a/content/blog/tech/ソフトウェア/2023-03-31-AUTOMATIC1111で階層マージを行う.md
+++ b/content/blog/tech/ソフトウェア/2023-03-31-AUTOMATIC1111で階層マージを行う.md
@@ -274,6 +274,4 @@ Docker版を使用している場合`stable-diffusion-webui-docker\data\config\a
 
 ---
 
-```amazon:4862760856
-イシューからはじめよ――知的生産の「シンプルな本質」
-```
+::amazon{asin="4862760856" name="イシューからはじめよ――知的生産の「シンプルな本質」"}
