--- a/content/blog/tech/ハードウェア/2022-04-08-気になるイヤホン.md
+++ b/content/blog/tech/ハードウェア/2022-04-08-気になるイヤホン.md
@@ -50,18 +50,14 @@ tags: ['ハードウェア', 'オーディオ']
 
 ## Sennheiser IE 100 PRO
 
-```amazon:B096FJBM7B
-ゼンハイザー IE 100 PRO CLEAR
-```
+::amazon{asin="B096FJBM7B" name="ゼンハイザー IE 100 PRO CLEAR"}
 
 - コスパ最高の『入り口』
 - 初めてのモニターイヤホンにおすすめ
 
 ## FiiO FH3
 
-```amazon:B099WKN8CT
-FiiO FD3 インイヤーモニター 1DD MMCX コネクター フラッグシップレベル DLC
-```
+::amazon{asin="B099WKN8CT" name="FiiO FD3 インイヤーモニター 1DD MMCX コネクター フラッグシップレベル DLC"}
 
 - 総じて広く明るく柔らかい
 - フラット基調、リスニング機だが高い解像感
@@ -69,9 +65,7 @@ FiiO FD3 インイヤーモニター 1DD MMCX コネクター フラッグシッ
 
 ## final A4000
 
-```amazon:B08LMBJFGD
-final A4000 カナル型 有線 2ピン
-```
+::amazon{asin="B08LMBJFGD" name="final A4000 カナル型 有線 2ピン"}
 
 - ギターやボーカルが元気に音が聞こえてノリがとても良い
 - 中音域から高音域が特に素晴らしい
@@ -80,9 +74,7 @@ final A4000 カナル型 有線 2ピン
 
 ## QoA Adonis
 
-```amazon:B08QJ2FV96
-キューオーエー Adonis
-```
+::amazon{asin="B08QJ2FV96" name="キューオーエー Adonis"}
 
 - 弱ドンシャリで中高音の伸びと生感が素晴らしい
 - 人によっては中音が若干少ない
@@ -90,9 +82,7 @@ final A4000 カナル型 有線 2ピン
 
 ## ikko OH10
 
-```amazon:B07VH916DQ
-IKKO OH10 Obsidian ハイブリッドイヤホン
-```
+::amazon{asin="B07VH916DQ" name="IKKO OH10 Obsidian ハイブリッドイヤホン"}
 
 - ドンシャリ寄り
 - どっしりと腰の座った中低域が持ち味
@@ -112,9 +102,7 @@ IKKO OH10 Obsidian ハイブリッドイヤホン
 
 ## FiiO FD5
 
-```amazon:B08QM7N65J
-FiiO FD5 フラッグシップ ベリリリウムコーティング DLC 1DD
-```
+::amazon{asin="B08QM7N65J" name="FiiO FD5 フラッグシップ ベリリリウムコーティング DLC 1DD"}
 
 - 圧倒的な低音の量感と豊かな中音、繊細ながら決して刺さらない高音
 - やや低音よりのドンシャリ、高温の抜けがいい
@@ -122,9 +110,7 @@ FiiO FD5 フラッグシップ ベリリリウムコーティング DLC 1DD
 
 ## qdc Uranus
 
-```amazon:B084H3D7ZD
-qdc ハイブリッド型イヤホン Uranus エントリーモデル
-```
+::amazon{asin="B084H3D7ZD" name="qdc ハイブリッド型イヤホン Uranus エントリーモデル"}
 
 - 低域が力強く体の奥にまで響く感覚
 - 優しい中高音域と低音の締り
