--- a/content/blog/tech/ハードウェア/2022-04-27-PCオーディオ初心者に必要な知識.md
+++ b/content/blog/tech/ハードウェア/2022-04-27-PCオーディオ初心者に必要な知識.md
@@ -98,6 +98,4 @@ DACとはDigital Analog Converterの略です。
 
 最後になりますが、オススメのオーディオインターフェースはMOTU M2という製品です。レビューを調べてもらえばわかりますが、高品質なDACを搭載しているため聞き専でも満足できるレベルとされています。
 
-```amazon:B0815V2N4X
-MOTU M2 2in 2out オーディオインターフェイス
-```
+::amazon{asin="B0815V2N4X" name="MOTU M2 2in 2out オーディオインターフェイス"}
