--- a/content/blog/株式情報/市場動向/2021-03-23-TMDXへ疑問の声.md
+++ b/content/blog/株式情報/市場動向/2021-03-23-TMDXへ疑問の声.md
@@ -60,6 +60,4 @@ Ponさんは最終的なまとめとして、現在のTransMedicsは既にOCS He
 
 余談ですが医療分野への投資は分からない用語など多く登場し、調べていくうちに以前は想像もできなかった市場の一端を少しずつ分かる(分かったような)のが楽しいところですね。調べながらの紹介なので間違いなどあるかと思うので、ぜひ指摘など貰えればうれしいです。
 
-```amazon:B079JW31Q8
-ひきこまり吸血姫の悶々
-```
+::amazon{asin="B079JW31Q8" name="ひきこまり吸血姫の悶々"}
