--- a/content/blog/株式情報/市場動向/2021-03-24-半導体を理解する.md
+++ b/content/blog/株式情報/市場動向/2021-03-24-半導体を理解する.md
@@ -162,6 +162,4 @@ tags: ['市場動向', 'TSM', 'ASML', 'LRCX']
 - [SCREEN - 半導体製造プロセス](https://www.screen.co.jp/spe/technical/process)
 - [機械設計エンジニアの基礎知識](https://d-engineer.com/electric/handoutaiseizou.html)
 
-```amazon:B00LITO74W
-マンガでわかる半導体
-```
+::amazon{asin="B00LITO74W" name="マンガでわかる半導体"}
