--- a/content/blog/株式情報/投資戦略/2021-04-05-10K10Qの読み方.md
+++ b/content/blog/株式情報/投資戦略/2021-04-05-10K10Qの読み方.md
@@ -73,6 +73,4 @@ tags: ['投資戦略']
 
 詳細は[How to Read a 10-K/10-Q](https://www.investor.gov/introduction-investing/general-resources/news-alerts/alerts-bulletins/investor-bulletins/how-read)に掲載されています。
 
-```amazon:B08FR65QZG
-魔女の愛し仔
-```
+::amazon{asin="B08FR65QZG" name="魔女の愛し仔"}
