--- a/content/blog/株式情報/投資戦略/2022-02-15-Form13F.md
+++ b/content/blog/株式情報/投資戦略/2022-02-15-Form13F.md
@@ -82,6 +82,4 @@ Form 13Fは基本的に時系列でポートフォリオがどのように変化
 
 このように、Form 13Fを通して著名なファンドマネージャーのポートフォリオをのぞいてみることで新たな投資アイデアの発掘に役立つかもしれません。ぜひForm 13Fを見てみましょう。
 
-```amazon:B075JCTJ4X
-歴史の大局を見渡す ──人類の遺産の創造とその記録
-```
+::amazon{asin="B075JCTJ4X" name="歴史の大局を見渡す ──人類の遺産の創造とその記録"}
