--- a/content/blog/株式情報/投資戦略/2022-04-06-注目のコモディティETF.md
+++ b/content/blog/株式情報/投資戦略/2022-04-06-注目のコモディティETF.md
@@ -52,6 +52,4 @@ tags: ['投資戦略', '金利']
 
 [1699]: https://site1.sbisec.co.jp/ETGate/?_ControlID=WPLETdiR001Control&_PageID=WPLETdiR001Elst10&_DataStoreID=DSWPLETdiR001Control&getFlg=on&_ActionID=getDetailByIssue&stock_sec_code_mul=1699&s_rflg=&PER=&exchange_code=TKY&s_rkbn=5&int_ds=dstock:search_result:etfetnlist:price
 
-```amazon:B075JCTJ4X
-歴史の大局を見渡す ──人類の遺産の創造とその記録
-```
+::amazon{asin="B075JCTJ4X" name="歴史の大局を見渡す ──人類の遺産の創造とその記録"}
