--- a/content/blog/株式情報/投資戦略/2022-05-18-200dma.md
+++ b/content/blog/株式情報/投資戦略/2022-05-18-200dma.md
@@ -51,6 +51,4 @@ Buy and Hold戦略の優位性を語る際、よく使用されるのは2009年3
 
 利益は大きく損失は少なくという、全ての投資家の理想とする比較結果となっています。ちょうど株式市場は大きな暴落を迎えて S&P500は200日移動平均線を大きく割り込んで推移している状況です。この戦略を実践してみるにしてもしばらくは買い判断は訪れそうにないため、この機会にじっくりと吟味してみてはいかがでしょうか。私は一部資金をこの戦略用に振り分けて実践してみようかと思っているところです。
 
-```amazon:4909074023
-伝説のトレーダー集団 タートルズの全貌
-```
+::amazon{asin="B075JCTJ4X" name="歴史の大局を見渡す ──人類の遺産の創造とその記録"}
