--- a/content/blog/株式情報/投資戦略/2025-02-16-HIMSに対する批判の考察.md
+++ b/content/blog/株式情報/投資戦略/2025-02-16-HIMSに対する批判の考察.md
@@ -55,6 +55,4 @@ HIMSがCompounded GLP-1の販売を積極的に展開することで売上と利
 
 簡単にまとめると、HIMSは真っ当とは言えないグレーな領域で輝かしい評価を得ていると製薬業界からは思われることがあり、扱っている製品に少なくないリスクが顕在化する可能性があるということで、投資をするならば留意した方が良いということになります。
 
-```amazon:B0CYP6WMTW
-医学のあゆみ GLP-1受容体作動薬・GIP/GLP-1受容体作動薬─非臨床・臨床のエビデンスと実臨床における注意点
-```
+::amazon{asin="B0CYP6WMTW" name="医学のあゆみ GLP-1受容体作動薬・GIP/GLP-1受容体作動薬─非臨床・臨床のエビデンスと実臨床における注意点"}
