--- a/content/blog/株式情報/決算分析/2021-01-29-LHX2020Q4.md
+++ b/content/blog/株式情報/決算分析/2021-01-29-LHX2020Q4.md
@@ -107,6 +107,4 @@ BBレシオは1.03。
 
 バイデン政権による防衛産業の輸出について、L3Harris は同盟国への継続的な支援が維持されるとの見通し。中東など特定地域に関しては精査が行われる可能性を挙げつつ、同社にとっての売上比率は 1%程度であるため大きな影響を与えないとの考え。
 
-```amazon:4802207344
-ゼロからわかる宇宙防衛
-```
+::amazon{asin="4802207344" name="ゼロからわかる宇宙防衛"}
