--- a/content/blog/株式情報/決算分析/2021-08-17-IDXX2021Q2.md
+++ b/content/blog/株式情報/決算分析/2021-08-17-IDXX2021Q2.md
@@ -52,6 +52,4 @@ IDXXは下半期も順調なビジネスを展開できそうですね。
 
 コロナ禍で行われていたロックダウンなどの制限が撤廃される傾向が今後も続くことを予想しており、クリニックレベルでもペット業界の成長トレンドと連動して診療が増えている状況がこれを後押ししそうです。投資についても積極的であり、貪欲に成長の機会を伺うことのできる状態だと感じています。
 
-```amazon:4895310329
-MY VET HOSPITAL―動物病院のつくりかた
-```
+::amazon{asin="4895310329" name="MY VET HOSPITAL―動物病院のつくりかた"}
