--- a/content/blog/株式情報/決算分析/2021-09-01-ODFL2021Q2.md
+++ b/content/blog/株式情報/決算分析/2021-09-01-ODFL2021Q2.md
@@ -59,6 +59,4 @@ Old DominionのQ2の売上高は47.2%の増加となりましたが、これはL
 
 翻訳内容と数字について正確性は保証いたしません。
 
-```amazon:B07D5QFJX9
-なぜ？あの運送会社は価格競争に巻き込まれないのか
-```
+::amazon{asin="B07D5QFJX9" name="なぜ？あの運送会社は価格競争に巻き込まれないのか"}
