--- a/content/blog/株式情報/決算分析/2021-09-25-MTN2021Q4.md
+++ b/content/blog/株式情報/決算分析/2021-09-25-MTN2021Q4.md
@@ -92,6 +92,4 @@ Kirstenは最高マーケティング責任者として10年以上にわたりVa
 
 顧客のセグメントの数値は明かされませんでしたが、データベースに存在しない新規の顧客、失効したパスを所持していたが買い戻した顧客、パスを更新した顧客の3セグメントとも好調とのことです。
 
-```amazon:4810521389
-スキー研究 100年の軌跡と展望
-```
+::amazon{asin="4810521389" name="スキー研究 100年の軌跡と展望"}
