--- a/content/blog/株式情報/銘柄分析/2021-01-27-LHX.md
+++ b/content/blog/株式情報/銘柄分析/2021-01-27-LHX.md
@@ -93,6 +93,4 @@ L3Harrisのここ数年のアメリカ政府への収益依存度は約75%程度
 
 ![キャッシュフローの推移](/Stocks/lhx-cashflow_yci4bp.png)
 
-```amazon:4769816804
-現代ミリタリーのゲームチェンジャー 戦いのルールを変える兵器と戦術
-```
+::amazon{asin="4769816804" name="現代ミリタリーのゲームチェンジャー 戦いのルールを変える兵器と戦術"}
