--- a/content/blog/株式情報/銘柄分析/2021-08-21-INTU.md
+++ b/content/blog/株式情報/銘柄分析/2021-08-21-INTU.md
@@ -71,6 +71,4 @@ StockRowから取得したデータをグラフ化して掲載します。
 
 記事執筆時点(2021/8/21)：INTUのホルダーであるためバイアスがかかった内容の可能性があります。
 
-```amazon:B07PKPFNWF
-いらない保険　生命保険会社が知られたくない「本当の話」
-```
+::amazon{asin="B07PKPFNWF" name="いらない保険 生命保険会社が知られたくない「本当の話」"}
