--- a/content/blog/株式情報/銘柄分析/2025-01-27-JOBY.md
+++ b/content/blog/株式情報/銘柄分析/2025-01-27-JOBY.md
@@ -1,6 +1,6 @@
 ---
 title: 米国銘柄分析 | Joby Aviation(JOBY)
-description: 宇宙ベースのセルラーブロードバンドネットワーク
+description: Bevirt氏のビジョンは、eVTOLによって都市部の交通渋滞を緩和し、人々の移動をより効率的かつ持続可能なものにすることです。
 slug: joby-aviation
 publishedAt: 2025-01-27T12:01:00
 coverImage: /Hero/joby-mobility
