--- a/content/blog/株式情報/銘柄分析/2025-01-28-NEE.md
+++ b/content/blog/株式情報/銘柄分析/2025-01-28-NEE.md
@@ -1,6 +1,6 @@
 ---
 title: 米国銘柄分析 | NextEra Energy(NEE)
-description: 宇宙ベースのセルラーブロードバンドネットワーク
+description: 北米の電力およびエネルギーインフラストラクチャの大手企業です。
 slug: nextera-energy
 publishedAt: 2025-01-28T01:20:00
 coverImage: /Hero/YS4_5968_69_70-2-3_x9dlrp
