chore: 要約を更新

--- a/content/blog/game/2023-08-29-Steam版OW2で英語音声で日本語字幕.md
+++ b/content/blog/game/2023-08-29-Steam版OW2で英語音声で日本語字幕.md
@@ -1,6 +1,6 @@
 ---
 title: Steam版Overwatch 2で英語音声日本語字幕にする方法
-description: キャラクターボイスは英語にしたい人
+description: Steam版Overwatch 2で音声言語とテキスト言語を個別に設定する方法。英語音声で日本語字幕を表示したいプレイヤー向けに、起動オプションを使った設定手順と対応言語リストを解説。
 slug: how-to-change-audio-language-in-overwatch2
 publishedAt: 2023-08-29T20:30:00
 coverImage: /Hero/overwatch2-kiriko
