--- a/content/blog/game/2023-12-24-CLANNADの中国語設定画面の日本語訳.md
+++ b/content/blog/game/2023-12-24-CLANNADの中国語設定画面の日本語訳.md
@@ -1,6 +1,6 @@
 ---
 title: Steam版CLANNADの中国語設定画面の日本語訳
-description: 日本語化MOD適用時の画面早見用
+description: Steam版CLANNADに日本語化MODを適用した際、設定画面が中国語のままになる問題への対応。設定項目の中国語と日本語対訳表を提供し、プレイヤーの設定変更をサポート。
 slug: steam-clannad-system-configuration-translate
 publishedAt: 2023-12-24T19:30:00
 coverImage: /Hero/clannad-start-display
