--- a/content/blog/game/2024-09-21-黒い砂漠、覚醒Novaガイド-ミニコンボ集.md
+++ b/content/blog/game/2024-09-21-黒い砂漠、覚醒Novaガイド-ミニコンボ集.md
@@ -1,6 +1,6 @@
 ---
 title: 黒い砂漠：覚醒NVガイドのミニコンボ集
-description: ミニコンボを臨機応変に組み合わせられるようになろう
+description: 黒い砂漠の覚醒ノヴァで使用するミニコンボの詳細解説。群れから群れへの開幕、バースト、フィラー、ベストDPSコンボなど実践的なコンボ集と著名プレイヤーPAWEL氏のコンボ例も掲載。
 slug: bdo-awakening-nova-guide-japanese-mini-combos
 publishedAt: 2024-09-22T01:55:00
 coverImage: /Hero/bdo-awakening-nova-wallpaper
