--- a/content/blog/game/2024-09-21-黒い砂漠、覚醒Novaガイド.md
+++ b/content/blog/game/2024-09-21-黒い砂漠、覚醒Novaガイド.md
@@ -1,6 +1,6 @@
 ---
 title: 黒い砂漠：覚醒NVガイドの日本語訳
-description: 覚醒ノヴァとはなんぞやという基礎から学ぶ
+description: 黒い砂漠の覚醒ノヴァクラスの基本から応用まで。海外プレイヤーが作成したガイドの日本語翻訳版。スキル解説、加速メカニズム、PvEコンボ、星の息吹回復システムなどを包括的に解説した実用的なガイド。
 slug: bdo-awakening-nova-guide-japanese
 publishedAt: 2024-09-21T19:30:00
 coverImage: /Hero/bdo-awakening-nova-wallpaper
