--- a/content/blog/game/2024-12-25-黒い砂漠、デッドアイ解説.md
+++ b/content/blog/game/2024-12-25-黒い砂漠、デッドアイ解説.md
@@ -1,6 +1,6 @@
 ---
 title: 黒い砂漠：デッドアイ(DE)ガイドの日本語訳
-description: DEとはなんぞやという基礎から学ぶ
+description: 黒い砂漠の新キャラクター「デッドアイ」の基本メカニズムから主力スキル、移動スキル、PvEコンボまでを詳しく解説。韓国プレイヤーによる解説動画の日本語要約。
 slug: bdo-deadeye-guide-japanese
 publishedAt: 2024-12-25T10:30:00
 coverImage: /Hero/bdo-deadeye-wallpaper
