chore: 要約を更新

--- a/content/blog/military/その他/2021-09-24-アメリカで銃を撃った際の費用.md
+++ b/content/blog/military/その他/2021-09-24-アメリカで銃を撃った際の費用.md
@@ -1,6 +1,6 @@
 ---
 title: 射撃場を利用した際の費用
-description: 2020年にグロックを撃った際の費用
+description: 2020年にアメリカの射撃場でGlock 17を使用した際の詳細な費用内訳。レーン使用料、銃レンタル、弾丸、保護具など合計$46.48。初心者向け射撃体験記。
 slug: shooting-range-cost
 publishedAt: 2021-09-25T01:00:00
 coverImage: /Hero/gun-range.jpg
