--- a/content/blog/military/ガン本体/2024-05-13-SteyrL9A2のマガジンキャッチ交換.md
+++ b/content/blog/military/ガン本体/2024-05-13-SteyrL9A2のマガジンキャッチ交換.md
@@ -1,6 +1,6 @@
 ---
 title: 【STEYR L9A2】マガジンキャッチを簡単に左利き用に変更する方法
-description: マガジンキャッチを左利き用に変更する
+description: STEYR L9A2のマガジンキャッチを工具不要で左利き用に変更する手順を詳しく解説。スライド取り外しからマガジンキャッチの左右入れ替えまで写真付きで紹介。
 slug: kjworks-steyr-l9a2-magazine-catch-customize
 publishedAt: 2024-05-13T07:00:00
 coverImage: /Hero/kjworks-steyr-l9a2
