--- a/content/blog/military/光学機器/2023-04-19-GEISSELEタイプマウントリング.md
+++ b/content/blog/military/光学機器/2023-04-19-GEISSELEタイプマウントリング.md
@@ -1,6 +1,6 @@
 ---
 title: レビュー：HWZ GEISSELEタイプ スコープマウント
-description: 装着時の隙間は気になるが価格を考えるとアリ！
+description: HWZ製GEISSELEタイプ30mmスコープマウントのレビュー。実物の約6%の価格でGEISSELE形状を再現。装着時の隙間やズレはあるものの、レプリカ品質としては十分な選択肢。
 slug: hwz-geissele-30mm-scope-mount
 publishedAt: 2023-04-13T23:44:00
 coverImage: /Hero/hwzGeissele30mmScopeMount
