--- a/content/blog/military/外装パーツ/2023-06-10-BCMのレールカバーとフォアグリップ.md
+++ b/content/blog/military/外装パーツ/2023-06-10-BCMのレールカバーとフォアグリップ.md
@@ -1,6 +1,6 @@
 ---
 title: レビュー：BCMレールカバーとフォアグリップをMCMRに装着
-description: BCMの実銃パーツでドレスアップする
+description: BCM純正のKAGフォアグリップとレールパネルをMCMRハンドガードに装着。実銃パーツならではの質感と握り心地、装着後の改善点と注意すべきポイントを詳しくレビュー。
 slug: bcm-mcmr-dress-up-official-parts
 publishedAt: 2023-06-11T10:10:00
 coverImage: /Hero/bcmKagAndRailPanel
