--- a/content/blog/military/外装パーツ/2025-01-06-LeapersのMP5用ハンドガード.md
+++ b/content/blog/military/外装パーツ/2025-01-06-LeapersのMP5用ハンドガード.md
@@ -1,6 +1,6 @@
 ---
 title: レビュー：Leapers UTG PRO、MP5用ハンドガード
-description: M-Lok仕様でMP5を近代化
+description: Leapers UTG PRO製MP5用M-Lokハンドガードのレビューと装着方法。東京マルイMP5 A4に無加工でポン付け可能。モノリシック設計でトップレールも同時刷新する近代化改修。
 slug: leapers-utgpro-mp5-handguard
 publishedAt: 2025-01-06T15:10:00
 coverImage: /Hero/leapersUtgproMp5Handguard
