--- a/content/blog/military/装備/2024-02-07-VOLKのプレキャリ.md
+++ b/content/blog/military/装備/2024-02-07-VOLKのプレキャリ.md
@@ -1,6 +1,6 @@
 ---
 title: レビュー：VTG VBS PlateBag/Gen1.5
-description: コンパクトなファーストラインのベルトの有力候補
+description: VOLK TACTICAL GEAR VBS PlateBag/Gen1.5プレートキャリアのレビュー。日本人体型に合わせた設計のマルチカムブラック迷彩。モジュラー設計、カマーバンドサイズ、実物生地使用の詳細解説。
 slug: volk-tactical-gear-vbs-plate-bag-gen-15
 publishedAt: 2024-02-07T23:59:00
 coverImage: /Hero/volk-tactical-gear-vbs-plate-bag
