--- a/content/blog/military/装備/2024-06-17-SteyrL9A2の互換ホルスター.md
+++ b/content/blog/military/装備/2024-06-17-SteyrL9A2の互換ホルスター.md
@@ -1,6 +1,6 @@
 ---
 title: Steyr L9A2に適合するホルスター
-description: Omnivoreが最適解
+description: STEYR L9A2に適合するホルスターの検証。Blackhawk Omnivore(X300U-A対応)が最適解。Safariland 579 GLSとの非適合性やフレーム形状の違いを詳しく解説。
 slug: steyr-l9a2-omnivore-multifit
 publishedAt: 2024-06-17T17:00:00
 coverImage: /Hero/steyr-l9a2-omnivore-multifit
