chore: 要約を更新

--- a/content/blog/opinions/2020-12-09-XUAR.md
+++ b/content/blog/opinions/2020-12-09-XUAR.md
@@ -1,6 +1,6 @@
 ---
 title: 強制労働に関与の疑いのある企業たち
-description: 人権問題に熱心なようにアピールする一方で、正反対の行い
+description: 中国新疆ウイグル自治区での強制労働禁止法案に対し、NikeやCoca-Colaが法案効力を弱めるロビー活動を実施との報道。アメリカ議会報告書に掲載された強制労働関与疑い企業リストも併せて紹介。
 slug: companies-suspected-of-using-forced-labor
 publishedAt: 2020-12-09
 coverImage: /Hero/pexels-donald-tong-143580_nn8t45.jpg
