--- a/content/blog/opinions/2021-03-06-飲み会と時代錯誤批判の浅さ.md
+++ b/content/blog/opinions/2021-03-06-飲み会と時代錯誤批判の浅さ.md
@@ -1,6 +1,6 @@
 ---
 title: 「飲み会断らない人」批判に感じる日本社会の甘えた思考
-description: それをした人たちが優遇されることに批判をするのは傲慢
+description: 山田真貴子・前内閣広報官の「飲み会断らない」発言への批判に対する反論。飲み会参加者が評価されることへの批判は的外れであり、現実を見ずに理想論に逃げる甘えた思考の問題点を指摘。
 slug: nomikai-hihan-hihan
 publishedAt: 2021-03-06T17:05:00
 coverImage: /Hero/pexels-pixabay-274192_qpidky.jpg
