--- a/content/blog/opinions/2021-04-27-スイッチカバー.md
+++ b/content/blog/opinions/2021-04-27-スイッチカバー.md
@@ -1,6 +1,6 @@
 ---
 title: 照明スイッチを間違って消してしまわないように保護カバーを購入した
-description: うっかり電気のスイッチを消さないように保護カバーで対策
+description: スマートホーム化でPhilips Hueを導入したが、うっかり壁のスイッチを切ってしまう問題をパナソニックのスイッチ保護カバーで解決。開閉可能で電気工事不要の手軽な誤操作防止対策。
 slug: review-switch-cover
 publishedAt: 2021-04-27T22:00:00
 coverImage: /Hero/switch-cover-review.jpg
