--- a/content/blog/opinions/2021-12-18-宇宙旅行とクルーズ.md
+++ b/content/blog/opinions/2021-12-18-宇宙旅行とクルーズ.md
@@ -1,6 +1,6 @@
 ---
 title: 宇宙旅行は地球周回コスパで見れば超お得
-description: 12日間の滞在で地球を192周できる
+description: 前澤友作氏の宇宙旅行を地球周回コストパフォーマンスで分析。12日間で地球192周する宇宙旅行と世界一周クルーズ旅行を比較し、1周あたりの費用で宇宙旅行が15%安いという意外な結果を検証。
 slug: travel-space-cost-performance
 publishedAt: 2021-12-18T05:00:00
 coverImage: /Hero/pexels-pixabay-220201.jpg
