--- a/content/blog/opinions/2022-01-19-コンサルへの転職.md
+++ b/content/blog/opinions/2022-01-19-コンサルへの転職.md
@@ -1,6 +1,6 @@
 ---
 title: SEからITコンサルへ転職した際の体験
-description: Qiitaを鵜呑みにしてもうまくいかない
+description: SEからITコンサルへの転職体験記。転職SNS・エージェント活用法、ITコンサル向け職務経歴書作成(スキルシート形式は不適切)、面接対策、現職退職手続きまでの実践的ノウハウと業界特有の注意点。
 slug: job-change-se-it-consultant
 publishedAt: 2022-01-19T18:00:00
 coverImage: /Hero/pexels-cottonbro-5483064.jpg
