--- a/content/blog/opinions/2023-10-21-VTuberのスキャンダル.md
+++ b/content/blog/opinions/2023-10-21-VTuberのスキャンダル.md
@@ -1,6 +1,6 @@
 ---
 title: VTuberの恋愛スキャンダルと境界の曖昧さ
-description: 虚実の境界に生じる感情の波
+description: VTuberの恋愛スキャンダルに感じたダメージの理由を分析。虚実の境界の曖昧さ、ファンの投影と愛情の裏切り感、キャラクターと演者の境界線問題など、VTuberコンテンツの構造的課題を考察。
 slug: why-do-vtuber-love-affairs-bring-shock
 publishedAt: 2023-10-21T15:25:00
 coverImage: /Hero/post-apocalypse-and-star
