--- a/content/blog/opinions/2023-11-04-マネックスの不満点.md
+++ b/content/blog/opinions/2023-11-04-マネックスの不満点.md
@@ -1,6 +1,6 @@
 ---
 title: マネックス証券の不満点、資金が見えにく過ぎる
-description: 見えるが実際には使用できない買付可能額など
+description: マネックス証券の使いづらさを詳細分析。資金情報の分散管理、資金移動の遅延、メンテナンス頻度、実際には使用できない買付可能額表示など具体的な不満点と他社比較を踏まえた利用停止理由。
 slug: dissatisfaction-with-monex
 publishedAt: 2023-11-04T02:46:00
 coverImage: /Hero/dissatisfaction-with-monex
