--- a/content/blog/opinions/2024-06-29-香川県への旅行.md
+++ b/content/blog/opinions/2024-06-29-香川県への旅行.md
@@ -1,6 +1,6 @@
 ---
 title: 香川県：金刀比羅宮、Canon RF50mm F1.8 STM
-description: 旅行中に撮った写真を記念にまとめる
+description: Canon EOS R6 Mark IIとRF50mm F1.8 STMで香川県を撮影した旅行記。金刀比羅宮での雨上がりの参道や栗林公園の花菖蒲園など、単焦点レンズでの撮影体験と香川観光の記録。
 slug: rf50mm-f18-stm-with-kagawaken
 publishedAt: 2024-06-29T07:39:00
 coverImage: /Hero/kotohira-konpirasan
