--- a/content/blog/opinions/2025-02-15-ぶいすぽバレンタインまとめ.md
+++ b/content/blog/opinions/2025-02-15-ぶいすぽバレンタインまとめ.md
@@ -1,6 +1,6 @@
 ---
 title: ぶいすぽの2025年バレンタイン各メンバーショート動画リンクまとめ
-description: 自分用の各メンバーのショート動画まとめ
+description: ぶいすぽっ！の2025年バレンタイン企画として各メンバーが投稿したショート動画のリンク集。花芽すみれ、小雀とと、橘ひなのなど全22名のメンバーのYouTube動画を一覧でまとめた自分用備忘録。
 slug: vspo-2025-valentine
 publishedAt: 2025-02-15T14:45:00
 coverImage: /Hero/nvda-moat-data-transfer-ai-efficiency
