--- a/content/blog/opinions/2017-01-08-蒟蒻畑のカロリー.md
+++ b/content/blog/opinions/2017-01-08-蒟蒻畑のカロリー.md
@@ -1,6 +1,6 @@
 ---
 title: 蒟蒻畑は1個25kcal、こんにゃくだと思って食べるとめっちゃ太るという当たり前
-description: カロリーってめっちゃ美味いということ
+description: 蒟蒻畑の意外な高カロリーに驚いた体験談。こんにゃく名前に騙されて低カロリーと思い込んでいたが1個25kcal、1袋で300kcal。本家こんにゃくとの大きなカロリー差の現実を痛感。
 slug: konnyaku-batake-calorie
 publishedAt: 2017-01-08
 coverImage: /Hero/pexels-andreas-5333440_fdotl1.jpg
