--- a/content/blog/opinions/2023-12-18-マネックスからSBIへの移管.md
+++ b/content/blog/opinions/2023-12-18-マネックスからSBIへの移管.md
@@ -1,6 +1,6 @@
 ---
 title: マネックス証券からSBI証券へ米国株を移管する際にかかった日数
-description: ヘルプページに記載されている倍以上の日数が実際にはかかる
+description: マネックス証券からSBI証券への米国株移管手続きの実体験記録。ヘルプページでは2週間とされているが実際には1か月以上要した詳細なスケジュールと進捗管理の課題を備忘録として記載。
 slug: number-of-days-required-to-transfer-from-monex-to-sbi
 publishedAt: 2023-12-18T23:45:00
 coverImage: /Hero/girl-standing-by-door-in-dark
