chore: 要約を更新

--- a/content/blog/tech/ソフトウェア/2020-12-10-iPhoneApps2020.md
+++ b/content/blog/tech/ソフトウェア/2020-12-10-iPhoneApps2020.md
@@ -1,6 +1,6 @@
 ---
 title: iPhoneで常用するアプリの紹介
-description: iPhone時代に利用していたアプリとその用途
+description: iPhone 7 Plusから Pixel 4aに機種変更前のアプリ環境記録。Kindle、Buncho、YouTube Premium、Kyash、PortfolioTraderなど通勤時間中心の利用スタイルで愛用していたアプリ詳細レビュー。
 slug: iphone-my-install-app-2020
 publishedAt: 2020-12-10
 coverImage: /Hero/pexels-jess-bailey-designs-788946_ezfbo3.jpg
