--- a/content/blog/tech/ソフトウェア/2023-03-16-ChatGPTによる口調.md
+++ b/content/blog/tech/ソフトウェア/2023-03-16-ChatGPTによる口調.md
@@ -1,6 +1,6 @@
 ---
 title: ChatGPTによるアニメ風な性格の使い分けを試す
-description: 代表的な性格で白雪姫を紹介させてみた
+description: ChatGPT-4でアニメキャラクター性格の再現実験。ツンデレ、ドジっ子、クーデレ、ヤンデレの特徴を指定して白雪姫のあらすじを語らせ、AI の人格表現能力を検証。
 slug: chatgpt-try-to-be-anime-girls
 publishedAt: 2023-03-16T01:30:00
 coverImage: /Hero/pexels-mali-maeder-69378
