--- a/content/blog/tech/ソフトウェア/2023-03-17-茶髪ポニーテール.md
+++ b/content/blog/tech/ソフトウェア/2023-03-17-茶髪ポニーテール.md
@@ -1,6 +1,6 @@
 ---
 title: お気に入りの茶髪ポニーテールの呪文置き場
-description: Stable Diffusionで生成したお気に入り
+description: Stable DiffusionのAOM3A1 orangemixsモデルで生成した茶髪ポニーテール女性キャラクターのプロンプト集。怒り、困惑、涙など感情表現豊かなアニメイラストの呪文と生成パラメータを公開。
 slug: stable-diffusion-favorite-brown-hair-anime-girl-202303
 publishedAt: 2023-03-17T23:59:00
 coverImage: /Hero/stableDiffusion-brownPonytailGirl
