--- a/content/blog/tech/ソフトウェア/2023-03-31-AUTOMATIC1111で階層マージを行う.md
+++ b/content/blog/tech/ソフトウェア/2023-03-31-AUTOMATIC1111で階層マージを行う.md
@@ -1,6 +1,6 @@
 ---
 title: Stable Diffusionの階層マージのやり方：初心者向けハウツー
-description: Stable Diffusionでマージ沼にようこそ！
+description: Stable Diffusion階層マージ(MBW)の実践ガイド。AUTOMATIC1111のsd-webui-supermerger拡張を使い、U-Netの25層それぞれに重み付けしてオリジナルモデルを作成する詳細手順。
 slug: try-stable-diffusion-super-merger
 publishedAt: 2023-03-31T19:30:00
 coverImage: /Hero/try-stable-diffusion-super-merger
