--- a/content/blog/tech/ハードウェア/2022-04-08-気になるイヤホン.md
+++ b/content/blog/tech/ハードウェア/2022-04-08-気になるイヤホン.md
@@ -1,6 +1,6 @@
 ---
 title: 2022年の気になる中級イヤホン
-description: FPSゲームも音楽も楽しみたい
+description: 2022年注目の中級イヤホン10選。FPSゲームの足音識別と音楽鑑賞を両立する1.3〜3.7万円帯のイヤホンを価格・評価・音響特性で比較。Sennheiser、FiiO、finalなど人気機種の特徴を解説。
 slug: watchlist-earphone-2022
 publishedAt: 2022-04-08T08:25:00
 coverImage: /Hero/pexels-shvets-production-7533319
