--- a/content/blog/tech/ハードウェア/2022-04-27-PCオーディオ初心者に必要な知識.md
+++ b/content/blog/tech/ハードウェア/2022-04-27-PCオーディオ初心者に必要な知識.md
@@ -1,6 +1,6 @@
 ---
 title: オーディオ初心者がPC高音質化で押さえるべき知識
-description: DACやら何を揃えれば良いのかすら分からない人向け
+description: PCオーディオ高音質化の基礎知識。DAC・アンプの役割、再生・録音の仕組み、オーディオインターフェースの選び方まで、初心者が機材選びで迷わないための実践的ガイド。
 slug: pc-audio-basics
 publishedAt: 2022-04-27T19:42:00
 coverImage: /Hero/pexels-pixabay-210922
