chore: 要約を更新

--- a/content/blog/株式情報/市場動向/2020-11-08-バイオ銘柄の注目リスト.md
+++ b/content/blog/株式情報/市場動向/2020-11-08-バイオ銘柄の注目リスト.md
@@ -1,6 +1,6 @@
 ---
 title: バイオ銘柄の注目リスト
-description: 個人的に調べてみたいと思っているバイオ銘柄を紹介します。
+description: 注目すべきバイオ創薬企業4社を分析。BPMCのキナーゼ阻害剤、MDGLのNASH治療薬、FGENの慢性腕臓病治療薬、XLRNの粧液病治療薬など、各社のパイプラインと市場機会を詳細解説。
 slug: pickup-bio-2020
 publishedAt: 2020-11-08
 coverImage: /Hero/pexels-chokniti-khongchum-2280571_njhdv2.jpg
