--- a/content/blog/株式情報/市場動向/2021-02-13-StarLinkと衛星投入.md
+++ b/content/blog/株式情報/市場動向/2021-02-13-StarLinkと衛星投入.md
@@ -1,6 +1,6 @@
 ---
 title: スターリンクの衛星事情と交換頻度
-description: Starlinkの手掛ける衛星コンステレーションの概要について紹介します。
+description: SpaceXのStarlink衛星コンステレーションを徹底分析。計1万2,000基の衛星運用計画、LEO軌道での5年寿命、年間2,400基の交換コスト、Falcon 9/Heavyの打ち上げ能力、競合OneWeb・Amazon Kuiperとの比較まで詳細解説。
 slug: starlink-satellite
 publishedAt: 2021-02-13
 coverImage: /Hero/pexels-spacex-60132_cjwgdp.jpg
