--- a/content/blog/株式情報/市場動向/2021-03-24-半導体を理解する.md
+++ b/content/blog/株式情報/市場動向/2021-03-24-半導体を理解する.md
@@ -1,6 +1,6 @@
 ---
 title: 半導体の製造プロセスを雰囲気投資するために理解する
-description: そろそろ半導体産業について理解を深めようではありませんか
+description: 半導体製造プロセスを徹底解説。マスク製造からウェハ製造、前工程(成膜・露光・エッチング・イオン注入)、後工程(ダイシング・パッケージング)まで、ASMLやTSMCなど主要企業の役割と合わせて理解。
 slug: semiconductor-proccess
 publishedAt: 2021-03-24T00:00:00
 coverImage: /Hero/pexels-johannes-plenio-1105379_zeoumv.jpg
