--- a/content/blog/株式情報/市場動向/2023-11-17-アナリスト予想の確認方法.md
+++ b/content/blog/株式情報/市場動向/2023-11-17-アナリスト予想の確認方法.md
@@ -1,6 +1,6 @@
 ---
 title: 米国株のアナリスト予想、市場コンセンサスの確認方法
-description: Yahoo FinanceとZacksにおける確認方法を紹介
+description: 米国株のアナリスト予想確認手法を詳細解説。Yahoo FinanceのAnalysisページとZacksのDetailed Earnings Estimatesの見方、EPS・売上予想の読み取り、市場コンセンサスの限界と投資判断への活用方法。
 slug: how-to-check-earnings-estimate
 publishedAt: 2023-11-17T19:08:00
 coverImage: /Hero/how-to-check-earnings-estimate
