--- a/content/blog/株式情報/投資戦略/2021-04-05-10K10Qの読み方.md
+++ b/content/blog/株式情報/投資戦略/2021-04-05-10K10Qの読み方.md
@@ -1,6 +1,6 @@
 ---
 title: 決算資料10-Kと10-Qの読み方
-description: 各PartとItemの概要を紹介
+description: 米国上場企業の決算資料Form 10-K(年次)・10-Q(四半期)の読み解き方を詳細解説。各PartとItemの構成、Business・Risk Factors・MD&A・財務諸表など主要項目の意味と投資判断への活用方法。
 slug: how-to-read-annual-report
 publishedAt: 2021-04-05T00:00:00
 coverImage: /Hero/spxqvck1pqgatbajc4pp.jpg
