--- a/content/blog/株式情報/投資戦略/2022-02-15-Form13F.md
+++ b/content/blog/株式情報/投資戦略/2022-02-15-Form13F.md
@@ -1,6 +1,6 @@
 ---
 title: 機関投資家の報告書「Form 13F」の見方
-description: 有名ファンドマネージャーの保有銘柄などを読み解く
+description: 機関投資家の四半期報告書Form 13Fの読み方を詳細解説。著名ファンドマネージャーのポートフォリオを特定し、各テーブルの列定義、Bridgewaterの事例分析、注意点や投資アイデア発掘への活用方法を紹介。
 slug: how-to-read-form13f
 publishedAt: 2022-02-16T03:10:00
 coverImage: /Hero/pexels-daria-shevtsova-1030900
