--- a/content/blog/株式情報/投資戦略/2022-04-06-注目のコモディティETF.md
+++ b/content/blog/株式情報/投資戦略/2022-04-06-注目のコモディティETF.md
@@ -1,6 +1,6 @@
 ---
 title: 円建てで探すコモディティETF
-description: 農作物・金銀・原油
+description: 円建てで購入可能なコモディティETF一覧を紹介。農作物(WisdomTree 穀物・小麦・大豆・とうもろこし)、金銀(SPDRゴールド・純金上場信託)、原油(NOMURA原油インデックス)の信託報酬と特徴を詳細解説。
 slug: domestic-commodity-etf-list-2022
 publishedAt: 2022-04-06T21:38:00
 coverImage: /Hero/domestic-commodity-etf-list-2022
