--- a/content/blog/株式情報/投資戦略/2022-05-18-200dma.md
+++ b/content/blog/株式情報/投資戦略/2022-05-18-200dma.md
@@ -1,6 +1,6 @@
 ---
 title: 200日移動平均線を用いたトレード戦略
-description: S&P500のBuy and Holdを上回る成績
+description: 200日移動平均線を用いたトレンドフォロー戦略を詳細解説。2000-2020年のバックテストでS&P500のBuy and Hold(リターン364.2%、最大DD-55.2%)を上回る成績(リターン585.8%、最大DD-20.8%)を達成。
 slug: buy-and-hold-200-day-moving-average
 publishedAt: 2022-05-18T22:15:00
 coverImage: /Hero/buy-and-hold-200-day-moving-average
