--- a/content/blog/株式情報/投資戦略/2023-09-17-株価が割高かを考える.md
+++ b/content/blog/株式情報/投資戦略/2023-09-17-株価が割高かを考える.md
@@ -1,6 +1,6 @@
 ---
 title: 特定銘柄が割高な水準かどうかを推し量る方法
-description: 未来のPERを計算して簡易的にチェックする方法
+description: 株価が割高か割安かを判断する手法を詳細解説。将来のEPS予想からPERを計算しS&P500平均(25倍)と比較する方法。Teslaを例に投資判断の具体的な手順と成長率を踏まえた評価手法を紹介。
 slug: is-the-stock-price-overvalued
 publishedAt: 2023-09-17T21:15:00
 coverImage: /Hero/is-the-stock-price-overvalued
