--- a/content/blog/株式情報/投資戦略/2023-11-04-肥満治療薬への投資.md
+++ b/content/blog/株式情報/投資戦略/2023-11-04-肥満治療薬への投資.md
@@ -1,6 +1,6 @@
 ---
 title: 肥満治療薬、LLYとNVOへの投資を検討する
-description: バブルにも見える急騰具合だが現実的だろうか
+description: 肥満治療薬GLP-1受容体作動薬で急騰するEli Lilly(LLY)とNovo Nordisk(NVO)への投資を検討。アナリスト予想を基に2028年までのPER推移を計算。LLYは28倍、NVOは17倍まで改善し現在の高バリュエーションに一定の理由を証明。
 slug: consider-investing-in-lly-and-nvo
 publishedAt: 2023-11-04T20:45:00
 coverImage: /Hero/consider-investing-in-lly-and-nvo
