--- a/content/blog/株式情報/投資戦略/2024-06-17-SBIの取得単価不具合.md
+++ b/content/blog/株式情報/投資戦略/2024-06-17-SBIの取得単価不具合.md
@@ -1,6 +1,6 @@
 ---
 title: SBI証券における外国株式移管時の取得単価表示不具合
-description: 取得単価の表示に不具合があるが税金への影響はない
+description: SBI証券で外国株式を他社から移管した際の取得単価表示不具合を詳細報告。NVDAの株式分割後の取得单価16.04ドル表示など実態と異なる表示問題、その原因と税金計算への影響を問い合わせ結果と合わせて解説。
 slug: sbi-has-a-problem-with-the-display-of-acquisition-prices
 publishedAt: 2024-06-17T05:15:00
 coverImage: /Hero/pexels-andreas-5333440_fdotl1
