--- a/content/blog/株式情報/投資戦略/2024-07-23-トランプ政権になった際の方向.md
+++ b/content/blog/株式情報/投資戦略/2024-07-23-トランプ政権になった際の方向.md
@@ -1,6 +1,6 @@
 ---
 title: トランプ大統領が2024年選挙に勝利した場合の投資への影響
-description: エネルギー政策など分かりやすいセクターもある
+description: 2024年大統領選挙でトランプ氏が勝利した場合の投資への影響を分析。共和党の決議からエネルギー政策(化石燃料・原子力推進、太陽光・風力逆風)、国境管理強化、イスラエル支援などセクター別影響を予想。
 slug: trump-2024-impact-on-the-sector
 publishedAt: 2024-07-23T13:15:00
 coverImage: /Hero/pexels-cottonbro-5483064
