--- a/content/blog/株式情報/決算分析/2021-01-29-LHX2020Q4.md
+++ b/content/blog/株式情報/決算分析/2021-01-29-LHX2020Q4.md
@@ -1,6 +1,6 @@
 ---
 title: 決算紹介 | L3Harris Technologies (LHX)
-description: LHXの2020年度決算の概要を紹介します。
+description: L3Harris Technologies(LHX)2020年度決算を詳細分析。売上0.5%増、EPS28%減の背景、Integrated Mission Systems・Space and Airborne Systems・Communication Systems・Aviation Systems各セグメント別結果、2021年ガイダンスとバイデン政権影響を考察。
 slug: l3harris-2020
 publishedAt: 2021-01-29
 coverImage: /Hero/lhx-space_egv6ld.jpg
