--- a/content/blog/株式情報/決算分析/2021-08-17-IDXX2021Q2.md
+++ b/content/blog/株式情報/決算分析/2021-08-17-IDXX2021Q2.md
@@ -1,6 +1,6 @@
 ---
 title: 決算紹介 | IDEXX Laboratories (IDXX) 2021Q2
-description: 決算での質疑をピックアップして紹介
+description: IDEXX Laboratories(IDXX)2021Q2決算の質疑応答をピックアップ。EPS・売上・ガイダンス全てbeatの好決算、新製品ProCyteの導入状況、コンパニオンアニマルセグメントの成長持続性、T&E回復と投資計画を紹介。
 slug: idxx-2021q2
 publishedAt: 2021-08-17T08:45:00
 coverImage: /Hero/idxx-cover_f5ztjc.jpg
