--- a/content/blog/株式情報/決算分析/2021-08-18-AMZN2021Q2.md
+++ b/content/blog/株式情報/決算分析/2021-08-18-AMZN2021Q2.md
@@ -1,6 +1,6 @@
 ---
 title: 決算紹介 | Amazon (AMZN) 2021Q2
-description: 決算での質疑をピックアップして紹介
+description: Amazon(AMZN)2021Q2決算の質疑応答をピックアップ。EPS beatも売上・ガイダンスmissの背景、コロナ禁明けで人流増加とオンラインショッピング時間減少、プライムデー過去最高記録、AWS・広告など高利益率事業の成長を解説。
 slug: amzn-2021q2
 publishedAt: 2021-08-18T06:20:00
 coverImage: /Hero/pexels-sagar-soneji-4560039_o0imwu.jpg
