--- a/content/blog/株式情報/決算分析/2021-08-18-SHOP2021Q2.md
+++ b/content/blog/株式情報/決算分析/2021-08-18-SHOP2021Q2.md
@@ -1,6 +1,6 @@
 ---
 title: 決算紹介 | Shopify (SHOP) 2021Q2
-description: 決算での質疑をピックアップして紹介
+description: Shopify(SHOP)2021Q2決算の質疑応答をピックアップ。EPS・売上beatの好決算、ShopPayのShopify加盟店以外での展開とPayPal対抗可能性、テイクレート緩和の影響、コロナ禁で入会したマーチャントの定着率を詳細解説。
 slug: shop-2021q2
 publishedAt: 2021-08-18T07:14:00
 coverImage: /Hero/pexels-alexandra-maria-318236.jpg
