--- a/content/blog/株式情報/決算分析/2021-09-01-ODFL2021Q2.md
+++ b/content/blog/株式情報/決算分析/2021-09-01-ODFL2021Q2.md
@@ -1,6 +1,6 @@
 ---
 title: 決算紹介 | Old Dominion Freight Line (ODFL) 2021Q2
-description: 経営陣によるコメントの参考翻訳
+description: Old Dominion Freight Line(ODFL)2021Q2決算で経営陣コメントを翻訳。EPS・売上beatで売上47.2%増、営業利益率72.3%、EPS84.8%増の記録的成果。サービスセンターキャパシティ戦略、人材確保課題、物流業界動向を詳細解説。
 slug: odfl-2021q2
 publishedAt: 2021-09-01T22:56:00
 coverImage: /Hero/odfl-title.jpg
