--- a/content/blog/株式情報/決算分析/2021-09-25-MTN2021Q4.md
+++ b/content/blog/株式情報/決算分析/2021-09-25-MTN2021Q4.md
@@ -1,6 +1,6 @@
 ---
 title: 決算紹介 | Vail Resorts (MTN) 2021Q4
-description: 経営陣によるコメントの参考翻訳
+description: Vail Resorts(MTN)2021Q4決算で経営陣コメントを翻訳。コロナ禁でウィスラー・ブラッコム51%減、シーズンパス販売枚数42%増・売上17%増の好調、Rob Katz CEOの最後の決算発表、Kirsten Lynchの新CEO就任発表を詳細解説。
 slug: mtn-2021q4
 publishedAt: 2021-09-25T07:30:00
 coverImage: /Hero/pexels-evgenia-kirpichnikova-1973293.jpg
