--- a/content/blog/株式情報/銘柄分析/2021-10-26-DOCU.md
+++ b/content/blog/株式情報/銘柄分析/2021-10-26-DOCU.md
@@ -1,6 +1,6 @@
 ---
 title: 米国銘柄分析 | DocuSign(DOCU)
-description: 電子署名による改革ソリューションを提供する企業
+description: DocuSignの企業分析。電子署名から始まりAgreement Cloudで契約フロー全体のデジタル化を推進。高いNRRや顧客数の継続成長でサブスクリプションモデルの強さを示すが、Adobe等の競合他社との競争が激化する電子署名ソリューション企業の投資分析。
 slug: docu
 publishedAt: 2021-10-26T01:05:00
 coverImage: /Hero/docu-title.jpg
