--- a/content/blog/株式情報/銘柄分析/2025-01-28-NEE.md
+++ b/content/blog/株式情報/銘柄分析/2025-01-28-NEE.md
@@ -1,6 +1,6 @@
 ---
 title: 米国銘柄分析 | NextEra Energy(NEE)
-description: 北米の電力およびエネルギーインフラストラクチャの大手企業です。
+description: NextEra Energyの企業分析。FPLとNEERの2つの主要事業を展開し、再生可能エネルギー分野の世界最大級発電事業者として、規制対象電力事業と再生可能エネルギー事業の両輪で成長を続ける米国電力大手企業の投資分析。
 slug: nextera-energy
 publishedAt: 2025-01-28T01:20:00
 coverImage: /Hero/YS4_5968_69_70-2-3_x9dlrp
